# procedural

./: Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
App/Public/: index.html
src/: lib.rs  main.rs
src/mod/: player.rs
src/render/: pipeline_builder.rs
src/shaders/: shader.wgsl
