[package]
name = "procceve"
version = "0.1.0"
authors = ["Evelynn8Bit"]
edition = "2018"

[dependencies]
bevy = "0.15.0"
rand = "0.8.5"

[lib]
crate-type = ["cdylib"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
